# flexbin

./: .gitignore  CMakeLists.save  CMakeLists.txt  build.sh  example.cpp  fbstream_test.cpp  flexbin.hpp  flexbin_aux.hpp  flexbin_buffer.hpp  flexbin_debug.hpp  flexbin_read.hpp  flexbin_streams.hpp  flexbin_type_traits.hpp  flexbin_write.hpp  flexbin_write_strategies.hpp
example/: CMakeLists.txt  example.cpp
fbdump/: CMakeLists.txt  main.cpp
fbdump/data/: 1  2  3
include/: flexbin.hpp  flexbin_aux.hpp  flexbin_debug.hpp  flexbin_impl.hpp  flexbin_read.hpp  flexbin_streams.hpp  flexbin_stringview.hpp  flexbin_type_traits.hpp  flexbin_write.hpp
test/: CMakeLists.txt  flexbin_test.cpp  main.cpp  test_containers.cpp  test_custom.cpp  test_fundamentals.cpp  test_object.h  test_ptr.cpp  test_strings.cpp  test_substructure.cpp
test/googletest/: CMakeLists.txt
